// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<div
  className="spinner-border"
  role="status"
  style={
    Object {
      "height": 20,
      "width": 20,
    }
  }
>
  <span
    className="visually-hidden"
  >
    Loading...
  </span>
</div>
`;

exports[`should match snapshot 2`] = `
<div
  className="spinner-border mb-0"
  role="status"
  style={
    Object {
      "height": 10,
      "width": 10,
    }
  }
>
  <span
    className="visually-hidden"
  >
    Loading...
  </span>
</div>
`;
